css: fix ugly missing overflow on pre

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -167,7 +167,7 @@ pre {
   font-size: .8rem;
   line-height: 1.4;
   white-space: pre;
-  white-space: pre-wrap;
+/*  white-space: pre-wrap; */
   word-break: break-all;
   word-wrap: break-word;
   background-color: #f9f9f9;
@@ -186,6 +186,7 @@ pre code {
 }
 .highlight pre {
   margin-bottom: 0;
+  overflow-x: auto;
 }
 
 /* Gist via GitHub Pages */
